# simple-deadlock-mod-manager

./: .envrc  .gitignore  README.md  index.html  package.json  pak01_dir.vpk  pnpm-lock.yaml
.github/workflows/: main.yml
src/: App.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  types.rs  utils.rs
src-tauri/src/gamebanana_api/: api.rs  types.rs
src/components/: Button.tsx
src/components/AddMod/: AddModModal.tsx
src/components/Button/: Button.tsx
src/components/DeleteModal/: DeleteModal.tsx
src/components/DragDrop/: DragDrop.tsx
src/components/ErrorSnackbar/: ErrorSnackbar.tsx
src/components/FileSelect/: FileSelect.tsx  FileSelectModal.tsx
src/components/LoadModButtons/: LoadModButtons.tsx
src/components/LoadingSnackbar/: LoadingSnackBar.tsx
src/components/Mod/: Mod.tsx
src/components/Mod/ManageModModal/: ManageModModal.tsx
src/components/ModTab/: ModTab.tsx
src/components/Options/: Options.tsx
src/components/TopBar/: TopBar.tsx
src/stores/: useDeleteStore.ts  useErrorStore.ts  useFileSelectStore.ts  useLoadingStore.ts  useModManageStore.ts  useModsStore.ts
src/utils/: files.ts
