[package]
name = "simple-deadlock-mod-manager"
version = "0.4.0"
description = "A simple Mod Manager for Deadlock"
authors = ["gabri3445"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "deadlock_mod_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tauri-typegen = "0.5.0"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steamlocate = "2.0.1"
valve_pak = "0.1.0"
tauri-plugin-dialog = "2"
regex = "1.12.3"
rand = "0.10.0"
unrar = "0.5.8"
zip = "8.2.0"
directories = "6.0.0"
reqwest = { version = "0.13.2", features = ["stream"] }
url = "2.5.8"
tauri-plugin-http = "2"
futures-util = "0.3.32"
sevenz-rust2 = "0.20.2"

